# kinect-depth-data-filtering

./: .gitignore  CMakeLists.txt  README.md  drsfilter.cpp  drsfilter.h  drsfilterdata.h  filters.cpp  filters.h  fmm.cpp  fmm.h  fmmdata.h  gradientfilter.cpp  gradientfilter.h  medianfilter.cpp  medianfilter.h
